components/default/authentik/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app authentik
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://id.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/authentik.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["id.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
